--- a/test-output/index.html
+++ b/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Default_suite">
-                    <span>C:\Users\Naresh\AppData\Local\Temp\testng-eclipse-490838758\testng-customsuite.xml</span>
+                    <span>C:\Users\Naresh\AppData\Local\Temp\testng-eclipse--1584321047\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -102,7 +102,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="seleniumAdv3.ScreenCaptureWithDynamicFileName" hash-for-method="testScreenshots">testScreenshots</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="seleniumAdv2.AutoComplete" hash-for-method="testcase">testcase</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -120,14 +120,14 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">seleniumAdv3.ScreenCaptureWithDynamicFileName</span>
+              <span class="class-name">seleniumAdv2.AutoComplete</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="testScreenshots">
-                  </a> <!-- testScreenshots -->
-                  <span class="method-name">testScreenshots</span>
+                  <a name="testcase">
+                  </a> <!-- testcase -->
+                  <span class="method-name">testcase</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -135,7 +135,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\Naresh\AppData\Local\Temp\testng-eclipse-490838758\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\Naresh\AppData\Local\Temp\testng-eclipse--1584321047\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -144,7 +144,7 @@
 &lt;suite guice-stage=&quot;DEVELOPMENT&quot; name=&quot;Default suite&quot;&gt;
   &lt;test thread-count=&quot;5&quot; verbose=&quot;2&quot; name=&quot;Default test&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;seleniumAdv3.ScreenCaptureWithDynamicFileName&quot;/&gt;
+      &lt;class name=&quot;seleniumAdv2.AutoComplete&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -186,14 +186,14 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'testScreenshots')
-data.setCell(0, 2, 'seleniumAdv3.ScreenCaptureWithDynamicFileName')
-data.setCell(0, 3, 1548);
+data.setCell(0, 1, 'testcase')
+data.setCell(0, 2, 'seleniumAdv2.AutoComplete')
+data.setCell(0, 3, 6518);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 1 seconds</span>
+              <span class="suite-total-time">Total running time: 6 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -219,18 +219,18 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">seleniumAdv3.ScreenCaptureWithDynamicFileName</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">seleniumAdv2.AutoComplete</div> <!-- chronological-class-name -->
               <div class="configuration-test before">
-                <span class="method-name">setUp</span>
+                <span class="method-name">setup</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-test before -->
               <div class="test-method">
-                <span class="method-name">testScreenshots</span>
-                <span class="method-start">4141 ms</span>
+                <span class="method-name">testcase</span>
+                <span class="method-start">10584 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-test after">
-                <span class="method-name">tearDown</span>
-                <span class="method-start">5693 ms</span>
+                <span class="method-name">teardown</span>
+                <span class="method-start">17108 ms</span>
               </div> <!-- configuration-test after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
