--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="bc65a6">  <td>19/03/02 13:03:57</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;ScreenCaptureWithDynamicFileName.setUp()[pri:0, instance:seleniumAdv3.ScreenCaptureWithDynamicFileName@4b553d26]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@84739718</td>   <td></td> </tr>
-<tr bgcolor="bc65a6">  <td>19/03/02 13:04:01</td>   <td>4136</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ScreenCaptureWithDynamicFileName.testScreenshots()[pri:0, instance:seleniumAdv3.ScreenCaptureWithDynamicFileName@4b553d26]">testScreenshots</td> 
-  <td>main@84739718</td>   <td></td> </tr>
-<tr bgcolor="bc65a6">  <td>19/03/02 13:04:03</td>   <td>5688</td> <td>&nbsp;</td><td title="&lt;&lt;ScreenCaptureWithDynamicFileName.tearDown()[pri:0, instance:seleniumAdv3.ScreenCaptureWithDynamicFileName@4b553d26]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@84739718</td>   <td></td> </tr>
+<tr bgcolor="976963">  <td>20/08/22 15:48:17</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;AutoComplete.setup()[pri:0, instance:seleniumAdv2.AutoComplete@2781e022]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@352359770</td>   <td></td> </tr>
+<tr bgcolor="976963">  <td>20/08/22 15:48:27</td>   <td>10574</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AutoComplete.testcase()[pri:0, instance:seleniumAdv2.AutoComplete@2781e022]">testcase</td> 
+  <td>main@352359770</td>   <td></td> </tr>
+<tr bgcolor="976963">  <td>20/08/22 15:48:34</td>   <td>17099</td> <td>&nbsp;</td><td title="&lt;&lt;AutoComplete.teardown()[pri:0, instance:seleniumAdv2.AutoComplete@2781e022]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@352359770</td>   <td></td> </tr>
 </table>
